syntax = "proto3";

package api.settlement.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/settlement/v1;settlementv1";

// SettlementService Settlement服务服务定义。
service SettlementService {
// CreateSettlement 创建Settlement。
  rpc CreateSettlement(CreateSettlementRequest) returns (CreateSettlementResponse);
// AddOrderToSettlement 处理Add订单去Settlement请求。
  rpc AddOrderToSettlement(AddOrderToSettlementRequest) returns (google.protobuf.Empty);
// ProcessSettlement 处理ProcessSettlement请求。
  rpc ProcessSettlement(ProcessSettlementRequest) returns (google.protobuf.Empty);
// CompleteSettlement 处理CompleteSettlement请求。
  rpc CompleteSettlement(CompleteSettlementRequest) returns (google.protobuf.Empty);
// ListSettlements 处理列出Settlements请求。
  rpc ListSettlements(ListSettlementsRequest) returns (ListSettlementsResponse);

// RecordPaymentSuccess Record支付成功接口。
  rpc RecordPaymentSuccess(RecordPaymentSuccessRequest) returns (google.protobuf.Empty);

// GetMerchantAccount 获取Merchant账户。
  rpc GetMerchantAccount(GetMerchantAccountRequest) returns (GetMerchantAccountResponse);
}

// Settlement Settlement消息结构。
message Settlement {
  uint64 id = 1; // 唯一标识
  string settlement_no = 2; // 结算no
  uint64 merchant_id = 3; // merchant唯一标识
  string cycle = 4; // 周期
  google.protobuf.Timestamp start_date = 5; // 开始date
  google.protobuf.Timestamp end_date = 6; // 结束date
  int64 order_count = 7; // 订单计数
  uint64 total_amount = 8; // 总数金额
  uint64 platform_fee = 9; // platform费用
  uint64 settlement_amount = 10; // settlement金额
  int32 status = 11; // 状态
  google.protobuf.Timestamp settled_at = 12; // settled在
  string fail_reason = 13; // 失败reason
  google.protobuf.Timestamp created_at = 14; // 创建时间
  google.protobuf.Timestamp updated_at = 15; // 更新时间
}

// MerchantAccount Merchant账户消息结构。
message MerchantAccount {
  uint64 id = 1; // 唯一标识
  uint64 merchant_id = 2; // merchant唯一标识
  uint64 balance = 3; // 余额
  uint64 frozen_balance = 4; // frozen余额
  uint64 total_income = 5; // 总数income
  uint64 total_withdraw = 6; // 总数withdraw
  double fee_rate = 7; // 费用rate
  google.protobuf.Timestamp created_at = 8; // 创建时间
  google.protobuf.Timestamp updated_at = 9; // 更新时间
}

// CreateSettlementRequest 创建Settlement请求消息结构。
message CreateSettlementRequest {
  uint64 merchant_id = 1; // merchant唯一标识
  string cycle = 2; // 周期
  google.protobuf.Timestamp start_date = 3; // 开始date
  google.protobuf.Timestamp end_date = 4; // 结束date
}

// CreateSettlementResponse 创建Settlement响应消息结构。
message CreateSettlementResponse {
  Settlement settlement = 1; // 结算
}

// AddOrderToSettlementRequest Add订单去Settlement请求消息结构。
message AddOrderToSettlementRequest {
  uint64 settlement_id = 1; // 结算唯一标识
  uint64 order_id = 2; // 订单唯一标识
  string order_no = 3; // 订单no
  uint64 amount = 4; // 金额
}

// ProcessSettlementRequest ProcessSettlement请求消息结构。
message ProcessSettlementRequest {
  uint64 id = 1; // 唯一标识
}

// CompleteSettlementRequest CompleteSettlement请求消息结构。
message CompleteSettlementRequest {
  uint64 id = 1; // 唯一标识
}

// ListSettlementsRequest 列出Settlements请求消息结构。
message ListSettlementsRequest {
  uint64 merchant_id = 1; // merchant唯一标识
  int32 status = 2; // 状态
  int32 page = 3; // 页码
  int32 page_size = 4; // 页码大小
}

// ListSettlementsResponse 列出Settlements响应消息结构。
message ListSettlementsResponse {
  repeated Settlement settlements = 1; // 结算列表
  int64 total_count = 2; // 总数计数
}

// GetMerchantAccountRequest 获取Merchant账户请求消息结构。
message GetMerchantAccountRequest {
  uint64 merchant_id = 1; // merchant唯一标识
}

// GetMerchantAccountResponse 获取Merchant账户响应消息结构。
message GetMerchantAccountResponse {
  MerchantAccount account = 1; // 账户
}

// RecordPaymentSuccessRequest Record支付Success请求消息结构。
message RecordPaymentSuccessRequest {
  uint64 order_id = 1; // 订单唯一标识
  string order_no = 2; // 订单no
  uint64 merchant_id = 3; // merchant唯一标识
  int64 amount = 4; // 金额
  int64 channel_cost = 5; // 渠道成本
}
